[project]
name = "ml-experiments"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "requests>=2.28.1",
    "notebook>=7.0.6",
    "triton>=2.1.0",
    "transformers>=4.37.2",
    "playwright>=1.46.0",
]
readme = "README.md"
requires-python = ">= 3.8"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.hatch.build.targets.wheel]
packages = ["torch"]
